crates/vm/tests/snapshots/object_load_field__nested_unknown_opt.snap
---
source: crates/vm/tests/object_load_field.rs
expression: snapshot
---
# Input:
v := { a: {} }
print ?v.a.b


# Result (success):
none

# Stdout:
none

